@@ -6115,15 +6115,31 @@ argument_list|()
 decl_stmt|;
 comment|// TsOffset = end of column data. just comparing Row+CF length of each
 return|return
+operator|(
+operator|(
 name|left
 operator|.
 name|getTimestampOffset
 argument_list|()
+operator|-
+name|left
+operator|.
+name|getOffset
+argument_list|()
+operator|)
 operator|==
+operator|(
 name|right
 operator|.
 name|getTimestampOffset
 argument_list|()
+operator|-
+name|right
+operator|.
+name|getOffset
+argument_list|()
+operator|)
+operator|)
 operator|&&
 name|matchingRows
 argument_list|(
