@@ -18494,6 +18494,369 @@ comment|// Bloom filter test
 comment|//////////////////////////////////////////////////////////////////////////////
 specifier|public
 name|void
+name|testBloomFilterSize
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|byte
+index|[]
+name|tableName
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"testBloomFilterSize"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|row1
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"row1"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|fam1
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"fam1"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|qf1
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|val1
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"value1"
+argument_list|)
+decl_stmt|;
+comment|// Create Table
+name|HColumnDescriptor
+name|hcd
+init|=
+operator|new
+name|HColumnDescriptor
+argument_list|(
+name|fam1
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_COMPRESSION
+argument_list|,
+literal|false
+argument_list|,
+literal|true
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_TTL
+argument_list|,
+literal|"rowcol"
+argument_list|)
+decl_stmt|;
+name|HTableDescriptor
+name|htd
+init|=
+operator|new
+name|HTableDescriptor
+argument_list|(
+name|tableName
+argument_list|)
+decl_stmt|;
+name|htd
+operator|.
+name|addFamily
+argument_list|(
+name|hcd
+argument_list|)
+expr_stmt|;
+name|HRegionInfo
+name|info
+init|=
+operator|new
+name|HRegionInfo
+argument_list|(
+name|htd
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|Path
+name|path
+init|=
+operator|new
+name|Path
+argument_list|(
+name|DIR
+operator|+
+literal|"testBloomFilterSize"
+argument_list|)
+decl_stmt|;
+name|region
+operator|=
+name|HRegion
+operator|.
+name|createHRegion
+argument_list|(
+name|info
+argument_list|,
+name|path
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+name|int
+name|num_unique_rows
+init|=
+literal|10
+decl_stmt|;
+name|int
+name|duplicate_multiplier
+init|=
+literal|2
+decl_stmt|;
+name|int
+name|num_storefiles
+init|=
+literal|4
+decl_stmt|;
+for|for
+control|(
+name|int
+name|f
+init|=
+literal|0
+init|;
+name|f
+operator|<
+name|num_storefiles
+condition|;
+name|f
+operator|++
+control|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|duplicate_multiplier
+condition|;
+name|i
+operator|++
+control|)
+block|{
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+name|num_unique_rows
+condition|;
+name|j
+operator|++
+control|)
+block|{
+name|Put
+name|put
+init|=
+operator|new
+name|Put
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"row"
+operator|+
+name|j
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|put
+operator|.
+name|add
+argument_list|(
+name|fam1
+argument_list|,
+name|qf1
+argument_list|,
+name|val1
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|put
+argument_list|(
+name|put
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|region
+operator|.
+name|flushcache
+argument_list|()
+expr_stmt|;
+block|}
+comment|//before compaction
+name|Store
+name|store
+init|=
+name|region
+operator|.
+name|getStore
+argument_list|(
+name|fam1
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|StoreFile
+argument_list|>
+name|storeFiles
+init|=
+name|store
+operator|.
+name|getStorefiles
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|StoreFile
+name|storefile
+range|:
+name|storeFiles
+control|)
+block|{
+name|StoreFile
+operator|.
+name|Reader
+name|reader
+init|=
+name|storefile
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|reader
+operator|.
+name|loadFileInfo
+argument_list|()
+expr_stmt|;
+name|reader
+operator|.
+name|loadBloomfilter
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|num_unique_rows
+argument_list|,
+name|reader
+operator|.
+name|getFilterEntries
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|region
+operator|.
+name|compactStores
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+comment|//after compaction
+name|storeFiles
+operator|=
+name|store
+operator|.
+name|getStorefiles
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|StoreFile
+name|storefile
+range|:
+name|storeFiles
+control|)
+block|{
+name|StoreFile
+operator|.
+name|Reader
+name|reader
+init|=
+name|storefile
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|reader
+operator|.
+name|loadFileInfo
+argument_list|()
+expr_stmt|;
+name|reader
+operator|.
+name|loadBloomfilter
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|num_unique_rows
+argument_list|,
+name|reader
+operator|.
+name|getFilterEntries
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
 name|testAllColumnsWithBloomFilter
 parameter_list|()
 throws|throws
